# nanogpt-rs

./: .gitignore  Cargo.toml  README.md  nanogpt.ipynb  nanogpt.py  pyproject.toml
python/nanogpt_rs/: __init__.py  nanogpt_rs.pyi
src/: lib.rs
