[package]
name = "nanogpt-rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "nanogpt_rs"
crate-type = ["cdylib"]

[dependencies]
ahash = "0.8.3"
pyo3 = { version = "0.17.1", features = ["extension-module"] }
